# ShaderTools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  todo.md
ext/include/sol/: sol.hpp  sol_forward.hpp
fragments/atmospheric_scattering/: functions.glsl
fragments/builtins/: GlobalResources.lua  Material.lua  ObjectsSizes.lua  albedo.glsl  fragmentInterface.glsl  globalResources.glsl  vertexInterface.glsl
fragments/clustered_forward/: Clustered.frag  GridOffsets.comp  Light.frag  LightGrid.comp  LightList.comp  Pack.lua  Resources.lua
fragments/compiled/: AssignLightsToClustersBVH_Compiled.glsl  BuildBVH_Compiled.glsl  ComputeMortonCodes_Compiled.glsl  FindUniqueClusters_Compiled.glsl  MergeSort_Compiled.glsl  RadixSort_Compiled.glsl  ReduceLightsAABB_Compiled.glsl  UpdateLights_Compiled.glsl
fragments/include/: lightingFunctionsPBR.glsl
fragments/lib/: amdFastMath.glsl  depth.glsl
fragments/lighting_models/: globalPhong.glsl  pbrTextureIBL.glsl  simpleLights.glsl
fragments/tests/: TestResources.lua
fragments/volumetric_forward/: ClusterSamples.frag  Clustered.frag  Default.vert  Dimensions.lua  DrawID.vert  Functions.glsl  HeightMap.vert  MaterialSpecialization.glsl  PrePass.frag  Resources.glsl  Resources.json  ShaderPack.lua  Structures.glsl  Structures.json  VolumetricForward.lua  vfResources.lua  volumetric_forward.yaml
fragments/volumetric_forward/compute/: AssignLightsToClusters.comp  AssignLightsToClustersBVH - Copy.comp  AssignLightsToClustersBVH.comp  AssignLightsToClustersBVH.glsl  AssignLightsToClustersBVH_Old.comp  AssignLightsToClustersBVH_TooFlat.glsl  BuildBVH.comp  ComputeClusterAABBs.comp  ComputeFunctions.glsl  ComputeMortonCodes.comp  CullLights.comp  FindUniqueClusters.comp  MergeSort.comp  RadixSort.comp  ReduceLightsAABB.comp  UpdateClusterIndirectArgs.comp  UpdateLights.comp
fragments/volumetric_forward/debug/: DebugClusters.frag  DebugClusters.geom  DebugClusters.vert  DebugLights.frag  DebugLights.vert
include/: BindingGenerator.hpp  CommonInclude.hpp  Compiler.hpp  DescriptorStructs.hpp  ResourceFile.hpp  Shader.hpp  ShaderGenerator.hpp  ShaderGroup.hpp  ShaderResource.hpp  ShaderStructs.hpp  StructureFile.hpp
include/common/: CommonInclude.hpp  Shader.hpp  ShaderGroup.hpp  ShaderPack.hpp  ShaderResource.hpp  ShaderStage.hpp  ShaderToolsErrors.hpp  UtilityStructs.hpp  stSession.hpp
include/core/: ResourceGroup.hpp  ResourceUsage.hpp  Shader.hpp  ShaderGroup.hpp  ShaderPack.hpp  ShaderResource.hpp
include/generation/: Compiler.hpp  ShaderGenerator.hpp
include/lua/: LuaEnvironment.hpp  ResourceFile.hpp  StructureFile.hpp
include/parser/: BindingGenerator.hpp  DescriptorStructs.hpp  ShaderResource.hpp
include/reflection/: ReflectionStructs.hpp  ShaderReflector.hpp
include/resources/: ResourceGroup.hpp  ResourceUsage.hpp  ShaderResource.hpp
include/util/: Delegate.hpp  FileObserver.hpp
src/: BindingGenerator.cpp  Compiler.cpp  DescriptorStructs.cpp  FilesystemUtils.cpp  FilesystemUtils.hpp  Shader.cpp  ShaderGenerator.cpp  ShaderGroup.cpp  ShaderStructs.cpp  StructureFile.cpp  main.cpp
src/common/: Shader.cpp  ShaderGroup.cpp  ShaderPack.cpp  ShaderResource.cpp  ShaderStage.cpp  ShaderToolsErrors.cpp  UtilityStructs.cpp  UtilityStructsInternal.cpp  UtilityStructsInternal.hpp  stSession.cpp
src/common/impl/: SessionImpl.cpp  SessionImpl.hpp
src/core/: ResourceGroup.cpp  ResourceUsage.cpp  Shader.cpp  ShaderGroup.cpp  ShaderPack.cpp  ShaderResource.cpp  shader_pack_file.hpp
src/core/impl/: ShaderImpl.cpp  ShaderImpl.hpp  ShaderPackImpl.cpp  ShaderPackImpl.hpp  ShaderPackScript.cpp  ShaderPackScript.hpp  ShaderStageProcessor.cpp  ShaderStageProcessor.hpp  shader_pack_file.hpp
src/generation/: BuiltIns.hpp  Compiler.cpp  ShaderGenerator.cpp
src/generation/impl/: CompilerImpl.cpp  CompilerImpl.hpp  IncludeHandler.cpp  IncludeHandler.hpp  ShaderGeneratorImpl.cpp  ShaderGeneratorImpl.hpp  ShaderStageProcessor.cpp  ShaderStageProcessor.hpp
src/lua/: DescriptorStructs.cpp  LuaEnvironment.cpp  LuaEnvironment.hpp  ResourceFile.cpp  ResourceFile.hpp  StructureFile.cpp
src/parser/: BindingGenerator.cpp  BindingGeneratorImpl.cpp  BindingGeneratorImpl.hpp  DescriptorStructs.cpp  DescriptorStructs.hpp  ShaderResource.cpp  yamlFile.cpp  yamlFile.hpp
src/reflection/: ReflectionStructs.cpp  ShaderReflector.cpp  ShaderReflectorImpl.cpp  ShaderReflectorImpl.hpp
src/reflection/impl/: ShaderReflectorImpl.cpp  ShaderReflectorImpl.hpp
src/resources/: ResourceGroup.cpp  ResourceUsage.cpp  ShaderResource.cpp
src/util/: Delegate.hpp  FileObserver.cpp  FileObserver.hpp  FilesystemUtils.cpp  FilesystemUtils.hpp  ResourceFormats.cpp  ResourceFormats.hpp  ShaderFileTracker.cpp  ShaderFileTracker.hpp  ShaderPackBinary.cpp  ShaderPackBinary.hpp
tests/: Clustered.frag  Clustered.vert  TestResources.lua  icosphere.frag  icosphere.vert  test.cpp
